--- a/package.json
+++ b/package.json
@@ -77,21 +77,25 @@
     },
     "devDependencies": {
         "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
+        "babel-eslint": "^8.2.2",
+        "babel-loader": "^7.1.4",
         "babel-plugin-transform-react-jsx": "^6.24.1",
+        "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.1",
-        "cross-env": "^5.1.3",
+        "cross-env": "^5.1.4",
+        "css-loader": "^0.28.11",
         "del": "^2.2.2",
         "eslint": "4.16.0",
-        "eslint-config-airbnb": "^16.1.0",
         "eslint-config-wordpress": "2.0.0",
-        "eslint-plugin-import": "^2.7.0",
+        "eslint-plugin-import": "^2.9.0",
         "eslint-plugin-jest": "21.5.0",
         "eslint-plugin-jsx-a11y": "6.0.2",
         "eslint-plugin-react": "7.5.1",
+        "eslint-plugin-wordpress": "^0.1.0",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^4.1.0",
         "gulp-changed": "^2.0.0",
+        "gulp-clean-css": "^3.9.3",
         "gulp-if": "^2.0.2",
         "gulp-line-ending-corrector": "^1.0.1",
         "gulp-load-plugins": "^1.5.0",
@@ -99,25 +103,35 @@
         "gulp-rename": "^1.2.2",
         "gulp-replace": "^0.5.4",
         "gulp-replace-task": "^0.11.0",
-        "gulp-sass": "^3.1.0",
+        "gulp-sass": "^3.2.1",
         "gulp-sort": "^2.0.0",
         "gulp-uglify": "^3.0.0",
         "gulp-vinyl-zip": "^2.0.0",
-        "gulp-wp-pot": "^2.0.6",
+        "gulp-wp-pot": "^2.2.0",
         "gulp-zip": "^4.0.0",
         "husky": "^0.14.3",
         "json-file": "^0.1.0",
         "merge-stream": "^1.0.1",
         "npm-run-all": "^4.1.2",
         "run-sequence": "^2.1.0",
+        "sass-loader": "^6.0.7",
         "string-template": "^1.0.0",
+        "style-loader": "^0.20.3",
         "stylelint": "^8.4.0",
-        "stylelint-config-recommended-scss": "^3.0.0",
-        "stylelint-config-standard": "^18.0.0",
-        "stylelint-order": "^0.8.0",
-        "stylelint-scss": "^2.3.0",
+        "stylelint-config-recommended-scss": "^3.1.0",
+        "stylelint-config-standard": "^18.2.0",
+        "stylelint-order": "^0.8.1",
+        "stylelint-scss": "^2.5.0",
+        "svg-url-loader": "^2.3.2",
+        "svgo": "^1.0.5",
+        "svgo-loader": "^2.1.0",
+        "vinyl-named": "^1.1.0",
         "vinyl-named-with-path": "^1.0.0",
-        "webpack": "^3.10.0",
-        "webpack-stream": "^4.0.0"
+        "webpack": "^3.11.0",
+        "webpack-stream": "^4.0.3"
+    },
+    "dependencies": {
+        "react": "^16.3.1",
+        "classnames": "^2.2.5"
     }
 }
