--- a/package.json
+++ b/package.json
@@ -131,7 +131,9 @@
         "webpack-stream": "^4.0.3"
     },
     "dependencies": {
+        "classnames": "^2.2.5",
+        "iframe-resizer": "^3.6.1",
         "react": "^16.3.1",
-        "classnames": "^2.2.5"
+        "react-iframe-resizer-super": "^0.2.0"
     }
 }
