--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         ]
     },
     "devDependencies": {
+        "@svgr/webpack": "^2.2.1",
         "babel-core": "^6.26.0",
         "babel-eslint": "^8.2.2",
         "babel-loader": "^7.1.4",
@@ -122,9 +123,6 @@
         "stylelint-config-standard": "^18.2.0",
         "stylelint-order": "^0.8.1",
         "stylelint-scss": "^2.5.0",
-        "svg-url-loader": "^2.3.2",
-        "svgo": "^1.0.5",
-        "svgo-loader": "^2.1.0",
         "vinyl-named": "^1.1.0",
         "vinyl-named-with-path": "^1.0.0",
         "webpack": "^3.11.0",
