--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
         "babel-polyfill": "^6.26.0",
         "classnames": "^2.2.5",
         "iframe-resizer": "^3.6.1",
+        "rafl": "^1.2.2",
         "react": "^16.3.1",
         "react-iframe-resizer-super": "^0.2.0",
         "throttle-debounce": "^2.0.1"
