--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
         "css-lint-fix": "stylelint --fix --syntax scss \"src/**/*.scss\"",
         "js-lint": "eslint src/",
         "js-lint-fix": "eslint --fix src/",
-        "lint": "npm-run-all php-lint css-lint js-lint",
-        "lint-fix": "npm-run-all php-lint-fix css-lint-fix js-lint-fix",
+        "lint": "npm run php-lint && npm run css-lint && npm run js-lint",
+        "lint-fix": "npm run php-lint-fix && npm run css-lint-fix && npm run js-lint-fix",
         "update:packages": "npm i -g npm-check-updates && npm-check-updates -u && npm install",
-        "postinstall": "composer install",
-        "precommit": "npm run lint",
-        "prepush": "npm run lint"
+        "postinstall": "composer install"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint"
+        }
     },
     "gulp_config": {
         "variables": {
@@ -76,65 +79,62 @@
         ]
     },
     "devDependencies": {
-        "@svgr/webpack": "^2.2.1",
-        "babel-core": "^6.26.0",
-        "babel-eslint": "^8.2.2",
-        "babel-loader": "^7.1.4",
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "@svgr/webpack": "^4.0.0",
+        "@babel/core": "^7.1.5",
+        "@babel/register": "^7.0.0",
+        "babel-eslint": "^10.0.1",
+        "babel-loader": "^8.0.4",
+        "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
         "babel-plugin-transform-react-jsx": "^6.24.1",
-        "babel-preset-env": "^1.6.1",
-        "cross-env": "^5.1.4",
-        "css-loader": "^0.28.11",
-        "del": "^2.2.2",
-        "eslint": "4.16.0",
+        "@babel/preset-env": "^7.1.5",
+        "cross-env": "^5.2.0",
+        "css-loader": "^1.0.1",
+        "del": "^3.0.0",
+        "eslint": "5.8.0",
         "eslint-config-wordpress": "2.0.0",
-        "eslint-plugin-import": "^2.9.0",
-        "eslint-plugin-jest": "21.5.0",
-        "eslint-plugin-jsx-a11y": "6.0.2",
-        "eslint-plugin-react": "7.5.1",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-jsx-a11y": "6.1.2",
+        "eslint-plugin-react": "7.11.1",
         "eslint-plugin-wordpress": "^0.1.0",
         "gulp": "^3.9.1",
-        "gulp-autoprefixer": "^4.1.0",
-        "gulp-changed": "^2.0.0",
-        "gulp-clean-css": "^3.9.3",
+        "gulp-autoprefixer": "^6.0.0",
+        "gulp-changed": "^3.2.0",
+        "gulp-clean-css": "^3.10.0",
         "gulp-if": "^2.0.2",
-        "gulp-line-ending-corrector": "^1.0.1",
+        "gulp-line-ending-corrector": "^1.0.3",
         "gulp-load-plugins": "^1.5.0",
-        "gulp-plumber": "^1.1.0",
-        "gulp-rename": "^1.2.2",
-        "gulp-replace": "^0.5.4",
+        "gulp-plumber": "^1.2.0",
+        "gulp-rename": "^1.4.0",
+        "gulp-replace": "^1.0.0",
         "gulp-replace-task": "^0.11.0",
-        "gulp-sass": "^3.2.1",
+        "gulp-sass": "^4.0.2",
         "gulp-sort": "^2.0.0",
-        "gulp-uglify": "^3.0.0",
-        "gulp-vinyl-zip": "^2.0.0",
-        "gulp-wp-pot": "^2.2.0",
-        "gulp-zip": "^4.0.0",
-        "husky": "^0.14.3",
+        "gulp-vinyl-zip": "^2.1.0",
+        "gulp-wp-pot": "^2.3.2",
+        "gulp-zip": "^4.2.0",
+        "husky": "^1.1.3",
         "json-file": "^0.1.0",
         "md5": "^2.2.1",
         "merge-stream": "^1.0.1",
-        "npm-run-all": "^4.1.2",
-        "run-sequence": "^2.1.0",
-        "sass-loader": "^6.0.7",
+        "run-sequence": "^2.2.1",
+        "sass-loader": "^7.1.0",
         "string-template": "^1.0.0",
-        "style-loader": "^0.20.3",
-        "stylelint": "^8.4.0",
-        "stylelint-config-recommended-scss": "^3.1.0",
+        "style-loader": "^0.23.1",
+        "stylelint": "^9.7.1",
+        "stylelint-config-recommended-scss": "^3.2.0",
         "stylelint-config-standard": "^18.2.0",
-        "stylelint-order": "^0.8.1",
-        "stylelint-scss": "^2.5.0",
+        "stylelint-order": "^1.0.0",
+        "stylelint-scss": "^3.3.2",
         "vinyl-named": "^1.1.0",
         "vinyl-named-with-path": "^1.0.0",
-        "webpack": "^3.11.0",
-        "webpack-stream": "^4.0.3"
+        "webpack": "^4.25.1",
+        "webpack-stream": "^5.1.1"
     },
     "dependencies": {
-        "babel-polyfill": "^6.26.0",
-        "classnames": "^2.2.5",
-        "iframe-resizer": "^3.6.1",
+        "@babel/polyfill": "^7.0.0",
+        "classnames": "^2.2.6",
+        "iframe-resizer": "^3.6.3",
         "rafl": "^1.2.2",
-        "react": "^16.3.1",
         "react-iframe-resizer-super": "^0.2.0",
         "throttle-debounce": "^2.0.1"
     }
