--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "name": "visual-portfolio",
     "title": "Visual Portfolio",
+    "version": "1.12.0",
     "description": "Portfolio post type with visual editor",
     "license": "GPL-2.0",
     "author": "nK <https://nkdev.info>",
     "scripts": {
-        "build": "gulp",
-        "watch": "gulp watch",
-        "production": "gulp production",
+        "build": "wpeg --build",
+        "dev": "wpeg --build --watch",
+        "production": "wpeg --build --zip",
         "php-lint": "composer run-script phpcs",
         "php-lint-fix": "composer run-script phpcbf",
         "css-lint": "stylelint --syntax scss \"src/**/*.scss\"",
@@ -24,110 +25,29 @@
             "pre-commit": "npm run lint"
         }
     },
-    "gulp_config": {
-        "variables": {
-            "dist": "dist",
-            "plugin_name": "visual-portfolio",
-            "plugin_title": "Visual Portfolio",
-            "plugin_version": "1.12.0"
-        },
-        "template_vars": [
-            {
-                "patterns": [
-                    {
-                        "match": "text_domain",
-                        "replacement": "{plugin_name}"
-                    },
-                    {
-                        "match": "plugin_version",
-                        "replacement": "{plugin_version}"
-                    },
-                    {
-                        "match": "plugin_name",
-                        "replacement": "{plugin_name}"
-                    },
-                    {
-                        "match": "plugin_title",
-                        "replacement": "{plugin_title}"
-                    }
-                ],
-                "from": "{dist}/{plugin_name}"
-            }
-        ],
-        "work_folders": [
-            {
-                "from": "src",
-                "to": "{dist}/{plugin_name}"
-            }
-        ],
-        "translate": [
-            {
-                "title": "{plugin_title}",
-                "name": "{plugin_name}",
-                "author": "nK <https://nkdev.info>",
-                "text_domain": "{plugin_name}",
-                "from": "{dist}/{plugin_name}"
-            }
-        ],
-        "production": [
-            {
-                "file_name": "{plugin_name}.zip",
-                "base": "{dist}",
-                "from": "{dist}/{plugin_name}/**/*",
-                "to": "{dist}"
-            }
-        ]
-    },
     "devDependencies": {
-        "@svgr/webpack": "^4.0.0",
-        "@babel/core": "^7.1.5",
-        "@babel/register": "^7.0.0",
-        "babel-eslint": "^10.0.1",
-        "babel-loader": "^8.0.4",
-        "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-        "babel-plugin-transform-react-jsx": "^6.24.1",
-        "@babel/preset-env": "^7.1.5",
-        "cross-env": "^5.2.0",
-        "css-loader": "^1.0.1",
-        "del": "^3.0.0",
-        "eslint": "5.8.0",
+        "@babel/node": "^7.4.5",
+        "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+        "@babel/plugin-transform-react-jsx": "^7.3.0",
+        "@babel/preset-env": "^7.4.5",
+        "@babel/register": "^7.4.4",
+        "@svgr/webpack": "^4.3.0",
+        "babel-eslint": "^10.0.2",
+        "eslint": "5.16.0",
         "eslint-config-wordpress": "2.0.0",
-        "eslint-plugin-import": "^2.14.0",
-        "eslint-plugin-jsx-a11y": "6.1.2",
-        "eslint-plugin-react": "7.11.1",
+        "eslint-plugin-import": "^2.17.3",
+        "eslint-plugin-jsx-a11y": "6.2.1",
+        "eslint-plugin-react": "7.13.0",
         "eslint-plugin-wordpress": "^0.1.0",
-        "gulp": "^3.9.1",
-        "gulp-autoprefixer": "^6.0.0",
-        "gulp-changed": "^3.2.0",
-        "gulp-clean-css": "^3.10.0",
-        "gulp-if": "^2.0.2",
-        "gulp-line-ending-corrector": "^1.0.3",
-        "gulp-load-plugins": "^1.5.0",
-        "gulp-plumber": "^1.2.0",
-        "gulp-rename": "^1.4.0",
-        "gulp-replace": "^1.0.0",
-        "gulp-replace-task": "^0.11.0",
-        "gulp-sass": "^4.0.2",
-        "gulp-sort": "^2.0.0",
-        "gulp-wp-pot": "^2.3.2",
-        "gulp-zip": "^4.2.0",
-        "husky": "^1.1.3",
+        "husky": "^2.4.1",
         "json-file": "^0.1.0",
         "md5": "^2.2.1",
-        "merge-stream": "^1.0.1",
-        "run-sequence": "^2.2.1",
-        "sass-loader": "^7.1.0",
-        "string-template": "^1.0.0",
-        "style-loader": "^0.23.1",
-        "stylelint": "^9.7.1",
-        "stylelint-config-recommended-scss": "^3.2.0",
-        "stylelint-config-standard": "^18.2.0",
-        "stylelint-order": "^1.0.0",
-        "stylelint-scss": "^3.3.2",
-        "vinyl-named": "^1.1.0",
-        "vinyl-named-with-path": "^1.0.0",
-        "webpack": "^4.25.1",
-        "webpack-stream": "^5.1.1"
+        "stylelint": "^10.1.0",
+        "stylelint-config-recommended-scss": "^3.3.0",
+        "stylelint-config-standard": "^18.3.0",
+        "stylelint-order": "^3.0.0",
+        "stylelint-scss": "^3.8.0",
+        "wpeg": "0.0.15"
     },
     "dependencies": {
         "@babel/polyfill": "^7.0.0",
