--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
         "build": "wpeg --build",
         "dev": "wpeg --build --watch",
         "production": "wpeg --build --zip",
-        "php-lint": "composer run-script phpcs",
-        "php-lint-fix": "composer run-script phpcbf",
+        "php-lint": "composer phpcs",
+        "php-lint-fix": "composer phpcbf",
         "css-lint": "stylelint --syntax scss \"src/**/*.scss\"",
         "css-lint-fix": "stylelint --fix --syntax scss \"src/**/*.scss\"",
         "js-lint": "eslint src/",
