--- a/package.json
+++ b/package.json
@@ -15,47 +15,33 @@
         "css-lint-fix": "stylelint --fix --syntax scss \"src/**/*.scss\"",
         "js-lint": "eslint src/",
         "js-lint-fix": "eslint --fix src/",
-        "lint": "npm run php-lint && npm run css-lint && npm run js-lint",
-        "lint-fix": "npm run php-lint-fix && npm run css-lint-fix && npm run js-lint-fix",
-        "update:packages": "npm i -g npm-check-updates && npm-check-updates -u && npm install",
         "postinstall": "composer install"
     },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
-    },
     "devDependencies": {
-        "@babel/node": "^7.4.5",
-        "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-        "@babel/plugin-transform-react-jsx": "^7.3.0",
-        "@babel/preset-env": "^7.4.5",
-        "@babel/register": "^7.4.4",
-        "@svgr/webpack": "^4.3.0",
-        "babel-eslint": "^10.0.2",
-        "eslint": "5.16.0",
-        "eslint-config-wordpress": "2.0.0",
-        "eslint-plugin-import": "^2.17.3",
-        "eslint-plugin-jsx-a11y": "6.2.1",
-        "eslint-plugin-react": "7.13.0",
-        "eslint-plugin-wordpress": "^0.1.0",
-        "husky": "^2.4.1",
+        "@babel/node": "^7.8.7",
+        "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+        "@babel/plugin-transform-react-jsx": "^7.9.4",
+        "@babel/preset-env": "^7.9.5",
+        "@babel/register": "^7.9.0",
+        "@svgr/webpack": "^5.3.1",
+        "base64-inline-loader": "^1.1.1",
+        "eslint-config-nk": "^0.0.17",
+        "husky": "^3.1.0",
         "json-file": "^0.1.0",
+        "lint-staged": "^10.1.6",
         "md5": "^2.2.1",
         "micromatch": "^4.0.2",
-        "stylelint": "^10.1.0",
-        "stylelint-config-recommended-scss": "^3.3.0",
-        "stylelint-config-standard": "^18.3.0",
-        "stylelint-order": "^3.0.0",
-        "stylelint-scss": "^3.8.0",
-        "wpeg": "0.0.23"
+        "po2json": "^0.4.5",
+        "stylelint-config-nk": "^0.0.10",
+        "wpeg": "^1.0.9"
     },
     "dependencies": {
-        "@babel/polyfill": "^7.0.0",
         "classnames": "^2.2.6",
-        "iframe-resizer": "^3.6.3",
-        "iframe-resizer-react": "^1.0.1",
+        "iframe-resizer": "^4.2.10",
+        "iframe-resizer-react": "^1.0.3",
         "rafl": "^1.2.2",
-        "throttle-debounce": "^2.0.1"
+        "react-select": "^3.1.0",
+        "shorthash": "0.0.2",
+        "throttle-debounce": "^2.1.0"
     }
 }
