--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "react-ace": "^8.1.0",
         "react-masonry-component": "^6.2.1",
         "react-select": "^3.1.0",
+        "react-sortable-hoc": "^1.11.0",
         "shorthash": "0.0.2",
         "throttle-debounce": "^2.1.0"
     }
