--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     },
     "dependencies": {
         "@wordpress/base-styles": "^2.0.1",
-        "brace": "^0.11.1",
+        "ace-builds": "^1.4.12",
         "classnames": "^2.2.6",
         "clipboard-polyfill": "^3.0.1",
         "iframe-resizer": "^4.2.11",
