--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "ace-builds": "^1.4.12",
         "classnames": "^2.2.6",
         "clipboard-polyfill": "^3.0.1",
+        "gutenberg-react-select-styles": "0.0.1",
         "iframe-resizer": "^4.2.11",
         "iframe-resizer-react": "^1.0.4",
         "is-number": "^7.0.0",
