--- a/package.json
+++ b/package.json
@@ -31,25 +31,35 @@
         "lint-staged": "^10.1.6",
         "md5": "^2.3.0",
         "micromatch": "^4.0.2",
+        "path": "^0.12.7",
         "po2json": "^0.4.5",
         "stylelint-config-nk": "^0.0.10",
         "wpeg": "^1.0.14"
     },
     "dependencies": {
+        "@fancyapps/fancybox": "^3.5.7",
         "@wordpress/base-styles": "^2.0.1",
         "ace-builds": "^1.4.12",
         "classnames": "^2.2.6",
         "clipboard-polyfill": "^3.0.1",
+        "flickr-justified-gallery": "^1.0.3",
         "gutenberg-react-select-styles": "0.0.1",
+        "ie11-custom-properties": "^4.1.0",
         "iframe-resizer": "^4.2.11",
         "iframe-resizer-react": "^1.0.4",
         "is-number": "^7.0.0",
+        "isotope-layout": "^3.0.6",
+        "lazysizes": "^5.2.2",
+        "object-fit-images": "^3.2.4",
+        "photoswipe": "^4.1.3",
         "rafl": "^1.2.2",
         "react-ace": "^9.1.2",
         "react-masonry-component": "^6.2.1",
         "react-select": "^3.1.0",
         "react-sortable-hoc": "^1.11.0",
         "shorthash": "0.0.2",
+        "simplebar": "^5.3.0",
+        "swiper": "^6.3.2",
         "throttle-debounce": "^2.2.1"
     }
 }
