--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "lazysizes": "^5.2.2",
         "object-fit-images": "^3.2.4",
         "photoswipe": "^4.1.3",
-        "rafl": "^1.2.2",
+        "raf-schd": "^4.0.2",
         "react-ace": "^9.1.2",
         "react-masonry-component": "^6.2.1",
         "react-select": "^3.1.0",
