--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "css-lint-fix": "stylelint --fix --syntax scss \"src/**/*.scss\"",
         "js-lint": "eslint src/",
         "js-lint-fix": "eslint --fix src/",
-        "postinstall": "composer install"
+        "postinstall": "npx simple-git-hooks && composer install"
     },
     "devDependencies": {
         "@babel/node": "^7.13.10",
@@ -26,13 +26,13 @@
         "@svgr/webpack": "^5.5.0",
         "base64-inline-loader": "^1.1.1",
         "eslint-config-nk": "^0.0.19",
-        "husky": "^5.1.3",
         "json-file": "^0.1.0",
         "lint-staged": "^10.5.4",
         "md5": "^2.3.0",
         "micromatch": "^4.0.2",
         "path": "^0.12.7",
         "po2json": "^0.4.5",
+        "simple-git-hooks": "^2.3.1",
         "stylelint-config-nk": "^0.0.12",
         "wpeg": "^1.2.0"
     },
