--- a/.editorconfig
+++ b/.editorconfig
@@ -10,5 +10,8 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = space
 
+[*.php]
+indent_size = 4
+
 [*.md]
 trim_trailing_whitespace = false
