--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "wpeg": "^1.2.6"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.5",
+    "@dnd-kit/sortable": "^7.0.1",
+    "@dnd-kit/utilities": "^3.2.0",
     "@fancyapps/fancybox": "^3.5.7",
     "@wordpress/base-styles": "^2.0.1",
     "ace-builds": "^1.4.13",
