--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -16,6 +16,8 @@
     <file>./src/</file>
     <exclude-pattern>*/vendor/*</exclude-pattern>
     <exclude-pattern>*/vendors/*</exclude-pattern>
+    <exclude-pattern>/tests/_missing-wp-functions.php</exclude-pattern>
+    <exclude-pattern>/tests/bootstrap.php</exclude-pattern>
 
 
     <!-- Only check the PHP files. JS files are checked separately with JSCS and JSHint. -->
