--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "shorthash": "0.0.2",
     "simplebar": "^5.3.6",
     "swiper": "^8.3.2",
-    "throttle-debounce": "^3.0.1"
+    "throttle-debounce": "^3.0.1",
+    "md5": "^2.3.0"
   }
 }
