--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,19 @@ npm-debug.log
 .phpcs.xml
 phpcs.xml
 
+.phpunit.result.cache
+/artifacts
+/tests/e2e/artifacts
+
+# The /.cache folder is needed for phpcs to cache results between runs, while other .cache folders must be ignored
+# It is not possible to re-include a file if a parent directory of that file is excluded
+# So, both /.cache and /.cache./.gitkeep must be re-included
+.cache
+!/.cache/
+/.cache/**
+!/.cache/.gitkeep
+
 # phpunit
 .phpunit.result.cache
+
+Thumbs.db
