--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,18 @@
     "phpcompatibility/phpcompatibility-wp": "^2.1",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
     "10up/wp_mock": "^0.4",
-    "php-stubs/wordpress-stubs": "^6.1"
+    "php-stubs/wordpress-stubs": "^6.2",
+    "php-stubs/wordpress-tests-stubs": "^6.2",
+    "spatie/phpunit-watcher": "^1.23",
+    "yoast/phpunit-polyfills": "^1.0"
   },
   "scripts": {
-    "phpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
-    "phpcbf": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcbf",
     "wp": "\"vendor/wp-cli/wp-cli/bin/wp\"",
-    "test:unit": "./vendor/bin/phpunit"
+    "test:unit": "./vendor/bin/phpunit",
+    "lint": "phpcs --standard=phpcs.xml.dist",
+    "format": "phpcbf --standard=phpcs.xml.dist --report-summary --report-source",
+    "test": "phpunit",
+    "test:watch": "phpunit-watcher watch < /dev/tty"
   },
   "config": {
     "allow-plugins": true
