--- a/package.json
+++ b/package.json
@@ -15,17 +15,38 @@
     "css-lint-fix": "stylelint --fix --custom-syntax postcss-scss \"src/**/*.scss\"",
     "js-lint": "eslint src/",
     "js-lint-fix": "eslint --fix src/",
-    "test:unit": "composer test:unit",
+    "wp-env": "wp-env",
+    "env:start": "wp-env start ",
+    "env:stop": "wp-env stop",
+    "test": "npm-run-all lint test:unit",
+    "test:e2e": "playwright test --config tests/e2e/playwright.config.js",
+    "test:e2e:ui": "playwright test --config tests/e2e/playwright.config.js --ui",
+    "pretest:unit:php": "wp-env start",
+    "test:unit:php": "wp-env run --env-cwd='wp-content/plugins/visual-portfolio/src' tests-wordpress vendor/bin/phpunit -c phpunit.xml.dist --verbose",
+    "lint": "concurrently \"npm run lint:js\" \"npm run lint:css\"",
+    "lint:css": "stylelint --custom-syntax postcss-scss \"src/**/*.scss\"",
+    "lint:js": "eslint src/",
+    "prelint:php": "wp-env run --env-cwd='wp-content/plugins/visual-portfolio/src' cli composer update --no-interaction",
+    "lint:php": "wp-env run --env-cwd='wp-content/plugins/visual-portfolio/src' cli composer run-script lint",
+    "format:css": "stylelint --fix --custom-syntax postcss-scss \"src/**/*.scss\"",
+    "format:js": "eslint --fix src/",
+    "format:php": "wp-env run --env-cwd='wp-content/plugins/visual-portfolio/src' cli composer run-script format",
     "prepare": "husky install",
     "postinstall": "composer install"
   },
   "devDependencies": {
+    "@playwright/test": "^1.35.1",
+    "@wordpress/e2e-test-utils-playwright": "^0.3.0",
+    "@wordpress/env": "^8.2.0",
     "@babel/node": "^7.16.8",
     "@babel/plugin-proposal-object-rest-spread": "^7.16.7",
     "@babel/plugin-transform-react-jsx": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.16.9",
     "@svgr/webpack": "^5.5.0",
+    "concurrently": "^8.2.0",
+    "eslint-plugin-playwright": "^0.15.2",
+    "filenamify": "^4.2.0",
     "base64-inline-loader": "^2.0.1",
     "browserslist-config-nk": "^1.0.0",
     "eslint-config-nk": "^1.1.0",
@@ -38,6 +59,7 @@
     "po2json": "^0.4.5",
     "prettier-config-nk": "^1.1.0",
     "stylelint-config-nk": "^1.1.2",
+    "npm-run-all": "^4.1.5",
     "wpeg": "^1.2.6"
   },
   "dependencies": {
