--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -14,10 +14,12 @@
 
     <!-- Check the /src/ directory and the directories below it. -->
     <file>./src/</file>
+    <exclude-pattern>./tests/*</exclude-pattern>
     <exclude-pattern>*/vendor/*</exclude-pattern>
     <exclude-pattern>*/vendors/*</exclude-pattern>
     <exclude-pattern>/tests/_missing-wp-functions.php</exclude-pattern>
     <exclude-pattern>/tests/bootstrap.php</exclude-pattern>
+    <exclude-pattern>*/node_modules/*</exclude-pattern>
 
 
     <!-- Only check the PHP files. JS files are checked separately with JSCS and JSHint. -->
@@ -27,8 +29,22 @@
     <arg value="ps"/>
 
     <!-- Check up to 8 files simultaneously. -->
-    <arg name="parallel" value="8"/>
+    <arg name="parallel" value="20"/>
 
+    <!-- Whenever possible, cache the scan results and re-use those for unchanged files on the next scan. -->
+	  <arg name="cache"/>
+
+  	<!-- Set the memory limit to 256M.
+    For most standard PHP configurations, this means the memory limit will temporarily be raised.
+    Ref: https://github.com/squizlabs/PHP_CodeSniffer/wiki/Advanced-Usage#specifying-phpini-settings
+    -->
+    <ini name="memory_limit" value="256M"/>
+
+    <!--
+    Prevent errors caused by WordPress Coding Standards not supporting PHP 8.0+.
+    See https://github.com/WordPress/WordPress-Coding-Standards/issues/2035
+    -->
+    <ini name="error_reporting" value="E_ALL &#38; ~E_DEPRECATED" />
 
     <!--
     #############################################################################
@@ -40,7 +56,9 @@
 
     <!-- Include sniffs for PHP cross-version compatibility. -->
     <config name="testVersion" value="7.2-"/>
-    <rule ref="PHPCompatibilityWP"/>
+    <rule ref="PHPCompatibilityWP">
+      <include-pattern>*\.php$</include-pattern>
+    </rule>
 
     <!-- Include the WordPress ruleset, with select exclusions. -->
     <rule ref="WordPress">
@@ -94,7 +112,6 @@
             </property>
         </properties>
     </rule>
-
     <rule ref="WordPress.Arrays.MultipleStatementAlignment">
         <properties>
             <!-- No need to adjust alignment of large arrays when the item with the largest key is removed. -->
