--- a/composer.json
+++ b/composer.json
@@ -3,19 +3,17 @@
     "wp-coding-standards/wpcs": "^2.3",
     "phpcompatibility/phpcompatibility-wp": "^2.1",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
-    "10up/wp_mock": "^0.4",
     "php-stubs/wordpress-stubs": "^6.2",
     "php-stubs/wordpress-tests-stubs": "^6.2",
     "spatie/phpunit-watcher": "^1.23",
     "yoast/phpunit-polyfills": "^1.0"
   },
   "scripts": {
-    "wp": "\"vendor/wp-cli/wp-cli/bin/wp\"",
-    "test:unit": "./vendor/bin/phpunit",
     "lint": "phpcs --standard=phpcs.xml.dist",
     "format": "phpcbf --standard=phpcs.xml.dist --report-summary --report-source",
     "test": "phpunit",
-    "test:watch": "phpunit-watcher watch < /dev/tty"
+    "test:watch": "phpunit-watcher watch < /dev/tty",
+    "wp": "\"vendor/wp-cli/wp-cli/bin/wp\""
   },
   "config": {
     "allow-plugins": true
