--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,1 @@
-custom: https://visualportfolio.co/pricing/
-custom: https://www.buymeacoffee.com/nkdev
+custom: [https://visualportfolio.co/pricing/,https://www.buymeacoffee.com/nkdev]
