--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "dev": "wp-scripts start -- inline --hot --progress",
     "build": "wp-scripts build --progress",
     "build:prod": "npm run make-pot && npm run make-json && npm run build && npm run zip",
+    "bump:patch": "gulp bump --type patch",
+    "bump:minor": "gulp bump --type minor",
+    "bump:major": "gulp bump --type major",
+    "bump:prerelease": "gulp bump --type prerelease",
+    "zip": "gulp zip",
     "wp-env": "wp-env",
     "env:start": "wp-env start ",
     "env:stop": "wp-env stop",
@@ -25,6 +30,8 @@
     "format:css": "stylelint --fix --custom-syntax postcss-scss \"src/**/*.scss\"",
     "format:js": "eslint --fix src/",
     "format:php": "wp-env run --env-cwd='wp-content/plugins/visual-portfolio/src' cli composer run-script format",
+    "make-pot": "composer wp -- i18n make-pot ./ ./languages/visual-portfolio.pot --skip-audit --exclude=vendor,vendors,node_modules,build,dist-zip --headers='{\"Last-Translator\":\"Visual Portfolio\",\"Report-Msgid-Bugs-To\":\"https://github.com/nk-crew/visual-portfolio/issues\"}'",
+		"make-json": "po2json ./languages/visual-portfolio.pot ./languages/visual-portfolio.json --format=jed1.x --pretty --domain=visual-portfolio",
     "prepare": "husky install",
     "postinstall": "composer install"
   },
@@ -34,18 +41,18 @@
     "@wordpress/env": "^8.6.0",
     "@wordpress/eslint-plugin": "^14.7.0",
     "@wordpress/prettier-config": "^2.17.0",
-    "@wordpress/scripts": "^26.12.0",
+    "@wordpress/scripts": "^24.3.0",
     "@wordpress/stylelint-config": "^21.17.0",
-    "filemanager-webpack-plugin": "^8.0.0",
-    "file-loader": "^6.2.0",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
     "del": "^6.1.1",
     "eslint-plugin-playwright": "^0.15.2",
     "eslint-plugin-prettier": "^5.0.0",
+    "file-loader": "^6.2.0",
+    "filemanager-webpack-plugin": "^8.0.0",
     "filenamify": "^4.2.0",
     "glob": "^10.2.7",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-change-file-content": "^1.0.1",
     "gulp-zip": "^4.2.0",
     "husky": "^8.0.3",
@@ -56,7 +63,7 @@
     "npm-run-all": "^4.1.5",
     "parse-version-string": "^1.0.1",
     "path": "^0.12.7",
-    "po2json": "^0.3.0",
+    "po2json": "^0.4.5",
     "rtlcss-webpack-plugin": "^4.0.7",
     "webpack-remove-empty-scripts": "^1.0.3",
     "yargs": "^17.7.2"
@@ -81,7 +88,7 @@
     "lazysizes": "^5.3.2",
     "photoswipe": "^4.1.3",
     "raf-schd": "^4.0.3",
-    "react-ace": "^10.1.0",
+    "react-ace": "^9.5.0",
     "react-masonry-component": "^6.3.0",
     "react-select": "^5.7.3",
     "react-sortable-hoc": "^2.0.0",
