added stylelint and prettier ignore for templates

--- a/.stylelintignore
+++ b/.stylelintignore
@@ -1,11 +1,10 @@
 **/*.js
 **/*.jsx
 **/*.min.css
-**/*style.css
-**/*style-rtl.css
 **/*.build.css
 node_modules
 src/assets/vendor
+src/templates/**/*.css
 dist
 duist-zip
 build
