--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -41,6 +41,11 @@
 	-->
 	<ini name="memory_limit" value="256M"/>
 
+	<!--
+	Prevent errors caused by WordPress Coding Standards not supporting PHP 8.0+.
+	See https://github.com/WordPress/WordPress-Coding-Standards/issues/2035
+	-->
+	<ini name="error_reporting" value="E_ALL &#38; ~E_DEPRECATED" />
 
 	<!--
 	#############################################################################
@@ -65,6 +70,7 @@
 		<properties>
 			<property name="allowUnusedParametersBeforeUsed" value="true"/>
 		</properties>
+		<exclude name="VariableAnalysis.CodeAnalysis.VariableAnalysis.UndefinedVariable" />
 	</rule>
 	<rule ref="WordPress.CodeAnalysis.EmptyStatement"/>
 
