--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"del": "^6.1.1",
 		"eslint-plugin-playwright": "^0.15.2",
 		"eslint-plugin-prettier": "^5.0.0",
+		"eslint-plugin-simple-import-sort": "^10.0.0",
 		"file-loader": "^6.2.0",
 		"filemanager-webpack-plugin": "^8.0.0",
 		"filenamify": "^4.2.0",
