--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,9 @@
-.DS_Store
-.sass-cache
-.publish
-.idea
-/dist
-/dist-zip
-/vendor
-/node_modules
-npm-debug.log
-.phpcs.xml
-phpcs.xml
-
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .phpunit.result.cache
 /artifacts
 /tests/e2e/artifacts
@@ -22,7 +16,46 @@ phpcs.xml
 /.cache/**
 !/.cache/.gitkeep
 
-# phpunit
-.phpunit.result.cache
+# Coverage directory used by tools like istanbul
+coverage
 
+# Plugin ZIP production build
+dist-zip
+
+# Webpack dev build
+build/**/runtime*
+build/**/*.hot-update.json
+build/**/*.hot-update.js
+build/**/*.hot-update.js.map
+
+# Compiled binary addons (https://nodejs.org/api/addons.html)
+build/Release
+
+# Composer directories
+vendor
+
+# Custom PHPCS configs
+.phpcs.xml
+phpcs.xml
+
+# Dependency directories
+node_modules/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Output of `npm pack`
+*.tgz
+
+# Output of `wp-scripts plugin-zip`
+*.zip
+
+# dotenv environment variables file
+.env
+
+# system files
+.DS_Store
 Thumbs.db
