--- a/.github/setup-node/action.yml
+++ b/.github/setup-node/action.yml
@@ -31,7 +31,7 @@ runs:
 
         - name: Install npm dependencies
           if: ${{ steps.cache-node_modules.outputs.cache-hit != 'true' }}
-          run: npm ci
+          run: npm ci --legacy-peer-deps
           shell: bash
 
         # On cache hit, we run the post-install script to match the native `npm ci` behavior.
