--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
 		"classnames": "^2.3.2",
 		"copy-webpack-plugin": "^11.0.0",
 		"flickr-justified-gallery": "^2.2.0",
-		"gutenberg-react-select-styles": "0.0.2",
+		"gutenberg-react-select-styles": "^0.0.3",
 		"iframe-resizer": "^4.3.11",
 		"is-number": "^7.0.0",
 		"isotope-layout": "^3.0.6",
