--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
 		"bump:prerelease": "gulp bump --type prerelease",
 		"zip": "gulp zip",
 		"wp-env": "wp-env",
-		"env:start": "wp-env start ",
+		"env:start": "wp-env start",
 		"env:stop": "wp-env stop",
-		"test": "npm-run-all lint test:unit",
+		"env:destroy": "wp-env destroy",
+		"test": "npm-run-all lint test:unit:php test:e2e",
 		"test:e2e": "playwright test --config tests/e2e/playwright.config.js",
 		"test:e2e:ui": "playwright test --config tests/e2e/playwright.config.js --ui",
 		"pretest:unit:php": "wp-env start",
