--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "visual-portfolio",
 	"title": "Visual Portfolio",
-	"version": "3.3.13",
+	"version": "3.3.14",
 	"description": "Portfolio post type with visual editor",
 	"license": "GPL-2.0",
-	"author": "nK <https://nkdev.info>",
+	"author": "Visual Portfolio Team <https://www.visualportfolio.com>",
 	"scripts": {
 		"dev": "wp-scripts start -- inline --hot --progress",
 		"build": "wp-scripts build --progress",
