--- a/package.json
+++ b/package.json
@@ -37,6 +37,11 @@
 		"postinstall": "composer install"
 	},
 	"devDependencies": {
+		"@babel/node": "^7.23.9",
+		"@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+		"@babel/plugin-transform-react-jsx": "^7.23.4",
+		"@babel/preset-env": "^7.24.0",
+		"@babel/register": "^7.23.7",
 		"@playwright/test": "^1.45.3",
 		"@wordpress/e2e-test-utils-playwright": "^1.4.0",
 		"@wordpress/env": "^10.4.0",
