chore: update toolchain and i18n build

--- a/package.json
+++ b/package.json
@@ -32,20 +32,12 @@
 		"format:js": "eslint --ext .js --fix assets/ gutenberg/",
 		"format:php": "wp-env run --env-cwd='wp-content/plugins/visual-portfolio' cli composer run-script format",
 		"make-pot": "composer wp -- i18n make-pot ./ ./languages/visual-portfolio.pot --skip-audit --exclude=vendor,vendors,node_modules,build,dist-zip --headers='{\"Last-Translator\":\"Visual Portfolio\",\"Report-Msgid-Bugs-To\":\"https://github.com/nk-crew/visual-portfolio/issues\"}'",
-		"make-json": "po2json ./languages/visual-portfolio.pot ./languages/visual-portfolio.json --format=jed1.x --pretty --domain=visual-portfolio",
+		"make-json": "node make-pot.js ./languages/visual-portfolio.pot ./languages/visual-portfolio.json --domain=visual-portfolio --pretty",
 		"prepare": "husky",
 		"postinstall": "composer install"
 	},
 	"overrides": {
-		"@inquirer/editor": "5.0.3",
-		"axios": "1.11.0",
-		"compression": "1.8.1",
-		"form-data": "4.0.4",
-		"node-forge": "1.3.2",
-		"on-headers": "1.1.0",
-		"tar-fs": "3.1.1",
-		"tmp": "0.2.5",
-		"ws": "8.18.3"
+		"webpack-dev-server": "5.2.2"
 	},
 	"devDependencies": {
 		"ajv": "8.17.1",
@@ -55,12 +47,12 @@
 		"@babel/preset-env": "^7.24.0",
 		"@babel/register": "^7.23.7",
 		"@playwright/test": "^1.57.0",
-		"@wordpress/e2e-test-utils-playwright": "^1.4.0",
-		"@wordpress/env": "^10.4.0",
-		"@wordpress/eslint-plugin": "^20.1.0",
-		"@wordpress/prettier-config": "^4.4.0",
-		"@wordpress/scripts": "^28.4.0",
-		"@wordpress/stylelint-config": "^22.4.0",
+		"@wordpress/e2e-test-utils-playwright": "^1.37.0",
+		"@wordpress/env": "^10.37.0",
+		"@wordpress/eslint-plugin": "^23.0.0",
+		"@wordpress/prettier-config": "^4.37.0",
+		"@wordpress/scripts": "^31.2.0",
+		"@wordpress/stylelint-config": "^23.29.0",
 		"concurrently": "^8.2.0",
 		"cross-env": "^7.0.3",
 		"del": "^6.1.1",
@@ -74,15 +66,15 @@
 		"gulp": "^5.0.0",
 		"gulp-change-file-content": "^1.0.1",
 		"gulp-zip": "^4.2.0",
+		"gettext-parser": "^8.0.0",
 		"husky": "^9.1.7",
 		"json-file": "^0.1.0",
-		"lint-staged": "^13.2.2",
+		"lint-staged": "^16.2.7",
 		"md5": "^2.3.0",
-		"micromatch": "^4.0.5",
+		"micromatch": "^4.0.8",
 		"npm-run-all": "^4.1.5",
 		"parse-version-string": "^1.0.1",
 		"path": "^0.12.7",
-		"po2json": "^0.4.5",
 		"rtlcss-webpack-plugin": "^4.0.7",
 		"webpack-remove-empty-scripts": "^1.0.3",
 		"yargs": "^17.7.2"
@@ -92,8 +84,8 @@
 		"@dnd-kit/sortable": "^7.0.1",
 		"@dnd-kit/utilities": "^3.2.0",
 		"@fancyapps/fancybox": "^3.5.7",
-		"@wordpress/base-styles": "^2.0.1",
-		"@wordpress/icons": "^9.49.0",
+		"@wordpress/base-styles": "^6.13.0",
+		"@wordpress/icons": "^11.4.0",
 		"ace-builds": "^1.22.0",
 		"classnames": "^2.3.2",
 		"copy-webpack-plugin": "^11.0.0",
