chore(build): make build:quiet actually quiet

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"dev": "wp-scripts start -- inline --hot --progress",
 		"build": "wp-scripts build --progress",
-		"build:quiet": "wp-scripts build --stats=errors-warnings",
+		"build:quiet": "cross-env VP_QUIET=1 wp-scripts build --stats=errors-warnings",
 		"build:prod": "npm run make-pot && npm run make-json && npm run build && npm run zip",
 		"bump:patch": "gulp bump --type patch",
 		"bump:minor": "gulp bump --type minor",
