--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 		"php-stubs/wordpress-stubs": "^6.3",
 		"php-stubs/wordpress-tests-stubs": "^6.3",
 		"spatie/phpunit-watcher": "^1.23",
-		"symfony/process": "^6.4.20",
+		"symfony/process": "^6.4",
 		"yoast/phpunit-polyfills": "^1.1",
 		"sirbrillig/phpcs-variable-analysis": "^2.11",
 		"wp-cli/i18n-command": "^2.4",
@@ -20,6 +20,9 @@
 		"wp": "\"vendor/wp-cli/wp-cli/bin/wp\""
 	},
 	"config": {
-		"allow-plugins": true
+		"allow-plugins": true,
+		"platform": {
+			"php": "8.1.0"
+		}
 	}
 }
